--- a/storage/persistent-volume.yml
+++ b/storage/persistent-volume.yml
@@ -1,10 +1,12 @@
 # From the task at K8S.io https://kubernetes.io/docs/tasks/configure-pod-container/configure-persistent-volume-storage/
 # The cluster admin role would create PV resources.
+#
+# See the following docs on Azure File https://docs.microsoft.com/en-us/azure/aks/azure-files-dynamic-pv
 
 kind: PersistentVolume
 apiVersion: v1
 metadata:
-  name: pv-volume
+  name: task-pv-volume
   labels:
     type: local
 spec:
@@ -17,6 +19,7 @@ spec:
   #valid values are Retain (default), Recycle and Delete.
   #Not all volume plugins support Recycle. See the volume plugin for details.
   persistentVolumeReclaimPolicy: Retain
-  # hostPath volume type so the volume is mapped to a path on the node
-  hostPath:
-    path: "/tmp/data"
+  # To use azureFile, create a storage account in the same resource group as your cluster
+  #
+  azureFile:
+
