--- a/storage/pvc-03.yml
+++ b/storage/pvc-03.yml
@@ -3,10 +3,8 @@ apiVersion: v1
 metadata:
   name: pv-claim-03
 spec:
-  volumeName: pv-volume
-  selector: 
-    matchLabels:
-       type: local
+  #volumeName: pv-volume
+  storageClassName: architech-sc
   accessModes:
     - ReadWriteOnce
   resources:
