--- a/storage/pv-hostpath.yml
+++ b/storage/pv-hostpath.yml
@@ -4,16 +4,21 @@ metadata:
   name: pv-volume
 spec:
   capacity:
-    storage: 10Gi
+    storage: 5Gi
   accessModes:
     - ReadWriteOnce
   #when the PVC is released, retain the data.
   #valid values are Retain (default), Recycle and Delete.
   #Not all volume plugins support Recycle. See the volume plugin for details.
   persistentVolumeReclaimPolicy: Retain
-  azureFile:
-    diskName: azure-disk
-    #Get the access URI for your disk from the azure portal
-    diskURI: <add your disk uri>
+  #to deploy to minikube ssh into minikube then create the directory
+  #
+  # minikube ssh
+  # su
+  # mkdir /mnt/data
+  hostPath:
+    path: /mnt/data
+  #required on minikube
+  storageClassName: standard
 
-
+    
