--- a/storage/pvc-01.yml
+++ b/storage/pvc-01.yml
@@ -4,10 +4,9 @@ apiVersion: v1
 metadata:
   name: pv-claim-01
 spec:
-  #volumeName: pv-volume
-  storageClassName: architech-sc
+  volumeName: pv-volume
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 3Gi
+      storage: 1Gi
