--- a/storage/non-root-pod-correct.yml
+++ b/storage/non-root-pod-correct.yml
@@ -1,32 +1,36 @@
-#This pod runs as NON-root. It will attempt to write to the /mnt/data directory.
-#It will FAIL.  Why?  Because to mount the volume, the container must run as root.
-#This is a problem!  See non-root-correct-pod.yml
+#This is the most standard way of dealing with the volumes being mounted as root.
+#Have an initContainer that runs in privileged mode.  Add a user and chown the mount
+#to that user.  In the main container, runAsUser with the GID of the user.
 kind: Pod
 apiVersion: v1
 metadata:
-  name: pv-pod-01
+  name: non-root-pod-02
 spec:
   volumes:
   - name: pv-storage
     persistentVolumeClaim:
       claimName: pv-claim-01
   initContainers:
-  - name: busybox
+  - name: busybox-root
     image: busybox
     volumeMounts:
     - mountPath: "/mnt/data"
       name: pv-storage
-      command:
-      - sh
-      - "-c"
-      - |
-          #create non-root user and change ownership/permissions to mountpath
-          #note the initContainer will run as root
-          adduser -DH non-root
-          chown -R non-root /mnt/data
-          chmod 700 /mnt/data
+    command:
+    - sh
+    - "-c"
+    - |
+        #create non-root user and change ownership/permissions to mountpath
+        #note the initContainer will run as root
+        adduser -DH -u 1000 non-root
+        chown -R non-root /mnt/data
+        chmod 760 /mnt/data
+    #This container will run as root and change the ownership and permissions
+    #of the volume
+    securityContext:
+      privileged: true
   containers:
-  - name: busybox-root
+  - name: busybox-non-root
     image: busybox
     ports:
     - containerPort: 80
@@ -46,6 +50,5 @@ spec:
       #here we mount the volume defined
       #above in volumes
       name: pv-storage
-  securityContext:
-    #Run as user with UID 1000 e.g. non-root
-    runAsNonRoot: true
+    securityContext:
+      runAsUser: 1000
