--- a/cluster-admin/resource-quota.yaml
+++ b/cluster-admin/resource-quota.yaml
@@ -1,1 +1,11 @@
 #Resource quota
+apiVersion: v1
+kind: ResourceQuota
+metadata:
+  name: mem-cpu-demo
+spec:
+  hard:
+    requests.cpu: "1"
+    requests.memory: 1Gi
+    limits.cpu: "2"
+    limits.memory: 2Gi
