--- a/chaos-engineering/gremlin.yaml
+++ b/chaos-engineering/gremlin.yaml
@@ -1,3 +1,6 @@
+#Gremlin is deployed as agents on each node on your cluster.  Hence, the containers are deployed as Daemonsets.
+#Note, it also needs some elevated privileges as it needs to be able to "impact" the environment based on "attacks"
+#that you specify through the Gremlim console at https://app.gremlin.com
 apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
